added checkout and sess

--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,9 @@
     <title>TechStore</title>
     
     <script src="https://use.fontawesome.com/86ad615387.js"></script>
-    <link rel="stylesheet" href="./styleAssignment.css">
+    <script src="https://js.stripe.com/v3/"></script>
+    <link rel="stylesheet" href="./style.css">
 
-    <script defer src="https://js.stripe.com/v3/"></script>
 
   </head>
   <body>
