--- a/client/index.html
+++ b/client/index.html
@@ -19,8 +19,40 @@
     </header>
 
     <div id="main">
+
       <!-- add items here! -->
     </div>
+    <h2 style="text-align: center"> Registration Form </h2>
+    <form name="RegForm" action="/form/submit.php" onsubmit="return ValidationForm()" id="form-hide" method="post" class="w3docs form-hide">
+      <div>
+        <label for="Name">Name:</label>
+        <input type="text" id="Name" size="60" name="Name">
+      </div>
+      <br>
+      <div>
+        <label for="E-mail">E-mail Address:</label>
+        <input type="text" id="E-mail" size="60" name="Email">
+      </div>
+      <br>
+      <div>
+        <label for="Password">Password:</label>
+        <input type="text" id="Password" size="60" name="Password">
+      </div>
+      <br>
+      <div>
+        <label for="Telephone">Telephone: </label>
+        <input type="text" id="Telephone" size="60" name="Telephone">
+      </div>
+      <br>
+      <div>
+        
+      </div>
+      <br>
+      <div class="buttons">
+        <input type="submit" value="Send" name="Submit">
+        <input type="reset" value="Reset" name="Reset">
+      </div>
+    </form>
 
     <script src="./scriptAssignment.js"></script>
     
