--- a/client/index.html
+++ b/client/index.html
@@ -25,33 +25,26 @@
     <h2 style="text-align: center"> Registration Form </h2>
     <form name="RegForm" action="/form/submit.php" onsubmit="return ValidationForm()" id="form-hide" method="post" class="w3docs form-hide">
       <div>
-        <label for="Name">Name:</label>
-        <input type="text" id="Name" size="60" name="Name">
+        <label for="First Name">Name:</label>
+        <input type="text" id="Name" size="60" name="Name" placeholder="Full Name">
       </div>
       <br>
       <div>
-        <label for="E-mail">E-mail Address:</label>
-        <input type="text" id="E-mail" size="60" name="Email">
+        <label for="adress">Address:</label>
+        <input type="text" id="adress" size="60" name="adress" placeholder="Adress">
       </div>
       <br>
       <div>
-        <label for="Password">Password:</label>
-        <input type="text" id="Password" size="60" name="Password">
+        <label for="E-mail">E-mail:</label>
+        <input type="text" id="E-mail" size="60" name="Email" placeholder="E-mail">
       </div>
       <br>
       <div>
         <label for="Telephone">Telephone: </label>
-        <input type="text" id="Telephone" size="60" name="Telephone">
+        <input type="text" id="Telephone" size="60" name="Telephone" placeholder="Telephone">
       </div>
       <br>
-      <div>
-        
-      </div>
       <br>
-      <div class="buttons">
-        <input type="submit" value="Send" name="Submit">
-        <input type="reset" value="Reset" name="Reset">
-      </div>
     </form>
 
     <script src="./scriptAssignment.js"></script>
