--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
     <form name="RegForm" action="/form/submit.php" onsubmit="return ValidationForm()" id="form-hide" method="post" class="w3docs form-hide">
       <div>
         <label for="First Name">Name:</label>
-        <input type="text" id="Name" size="60" name="Name" placeholder="Full Name">
+        <input type="text" id="name" size="60" name="Name" placeholder="Full Name">
       </div>
       <br>
       <div>
@@ -36,12 +36,12 @@
       <br>
       <div>
         <label for="E-mail">E-mail:</label>
-        <input type="text" id="E-mail" size="60" name="Email" placeholder="E-mail">
+        <input type="text" id="email" size="60" name="Email" placeholder="E-mail">
       </div>
       <br>
       <div>
         <label for="Telephone">Telephone: </label>
-        <input type="text" id="Telephone" size="60" name="Telephone" placeholder="Telephone">
+        <input type="text" id="telephone" size="60" name="Telephone" placeholder="Telephone">
       </div>
       <br>
       <br>
