success and cancelpages

--- a/client/cancel.html
+++ b/client/cancel.html
@@ -2,13 +2,26 @@
 <html>
 <head>
   <title>Checkout canceled</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="cofirmation.css">
 </head>
-<body>
-  <section>
-    <p>Forgot to add something to your cart? Shop around then come back to pay!</p>
-  </section>
 
-  
+<body>
+  <header>
+    <h1 onclick="createUIFromLoadedItemsData()">TechStore</h1>
+      <span id="counter"></span> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+    </a>
+  </header>
+  <main>
+    <section>
+      <h4>
+
+        Forgot to add something to your cart? Shop around then come back to pay!
+      </h4>
+        <h4>
+          <a href="index.html">Click here to return to store</a> 
+
+        </h4>      
+    </section>
+  </main>
 </body>
 </html>
