--- a/client/success.html
+++ b/client/success.html
@@ -2,16 +2,27 @@
 <html>
 <head>
   <title>Thanks for your order!</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="cofirmation.css">
 </head>
 <body>
-  <section>
-    <p>
-      We appreciate your business! If you have any questions, please email
-      <a href="mailto:orders@example.com">orders@example.com</a>.
-      <a href="index.html">CLICK</a> 
-    </p>
-  </section>
+  <header>
+    <h1 onclick="createUIFromLoadedItemsData()">TechStore</h1>
+      <span id="counter"></span> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+    </a>
+  </header>
+  <main>
+    <section>
+      <h4>
+
+        We appreciate your business! If you have any questions, please email
+        <a href="mailto:orders@example.com">orders@example.com</a>.
+      </h4>
+        <h4>
+          <a href="index.html">Click here to return to store</a> 
+
+        </h4>      
+    </section>
+  </main>
 
   
 </body>
