--- a/client/success.html
+++ b/client/success.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header>
-    <h1 onclick="createUIFromLoadedItemsData()">TechStore</h1>
+    <h1 onclick="createUIFromLoadedItemsData()">High-Store</h1>
       <span id="counter"></span> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
     </a>
   </header>
