--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <h1 onclick="createUIFromLoadedItemsData()">TechStore</h1>
+      <h1 onclick="createUIFromLoadedItemsData()">High-Store</h1>
       <a onclick="showShoppingCart()">
         <span id="counter"></span> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
       </a>
