--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
       <!-- add items here! -->
     </div>
     <h2 style="text-align: center"> Registration Form </h2>
-    <form name="RegForm" action="/form/submit.php" onsubmit="return ValidationForm()" id="form-hide" method="post" class="w3docs form-hide">
+    <form name="RegForm" action="" onsubmit="return ValidationForm()" id="form-hide" method="post" class="w3docs form-hide">
       <div>
         <label for="First Name">Name:</label>
         <input type="text" id="name" size="60" name="Name" placeholder="Full Name">
@@ -46,7 +46,7 @@
       <br>
       <br>
     </form>
-
+    <button id="get-all-customers"></button>
     <script src="./scriptAssignment.js"></script>
     
   </body>
