--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,8 @@
     </div>
 
 
-    <button id="get-all-customers"></button>
+    <button id="get-all-customers">Already Registered?</button>
+    <button id="get-all-customers">Create New Customer</button>
 
     <script src="./scriptAssignment.js"></script>
     
