--- a/client/success.html
+++ b/client/success.html
@@ -3,6 +3,7 @@
 <head>
   <title>Thanks for your order!</title>
   <link rel="stylesheet" href="cofirmation.css">
+  <script defer src="confirmation.js"></script>
 </head>
 <body>
   <header>
