--- a/client/index.html
+++ b/client/index.html
@@ -23,8 +23,8 @@
       <!-- add items here! -->
     </div>
 
-
-    <button id="get-all-customers"></button>
+    <button id="create-new-customer">New customer</button>
+    <button id="get-all-customers">Check if customer exist</button>
 
     <script src="./scriptAssignment.js"></script>
     
