fredriks-final-fucking-push

--- a/client/index.html
+++ b/client/index.html
@@ -22,10 +22,14 @@
       
       <!-- add items here! -->
     </div>
-
-
-    <button id="create-new-customer">New customer</button>
+<div id="formNBtns">
+<div id="form"></div>
+  <div id="customerBtns">
     <button id="get-all-customers">Check if customer exist</button>
+    <button id="create-new-customer">Register new customer</button>
+  
+  </div>
+</div>
 
     <script src="./scriptAssignment.js"></script>
     
