--- a/client/cancel.html
+++ b/client/cancel.html
@@ -4,7 +4,6 @@
   <title>Checkout canceled</title>
   <link rel="stylesheet" href="cofirmation.css">
 </head>
-
 <body>
   <header>
     <h1 onclick="createUIFromLoadedItemsData()">High-Store</h1>
@@ -13,14 +12,8 @@
   </header>
   <main>
     <section>
-      <h4>
-
-        Forgot to add something to your cart? Shop around then come back to pay!
-      </h4>
-        <h4>
-          <a href="index.html">Click here to return to store</a> 
-
-        </h4>      
+      <h4>Forgot to add something to your cart? Shop around then come back to pay!</h4>
+        <h4><a href="index.html">Click here to return to store</a></h4>      
     </section>
   </main>
 </body>
